demo/1.network-anomaly/netpolicy.yaml
#apiVersion: networking.k8s.io/v1
#kind: NetworkPolicy
#metadata:
#  name: default-deny-all
#spec:
#  podSelector: {}
#  policyTypes:
#    - Ingress
#    - Egress
#---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kvisor
  name: baseline
  namespace: demo
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
